Improvement: Readjustment of 3D Model + Bugfix for clipping issue on portrait tablet viewport

--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@ body {
   @media (orientation: portrait) {
     .hero-3d-layout {
       @apply w-full right-0;
-      top: 15rem; 
+      top: 13rem; 
       height: 500px; /* Fixed height */
       min-height: 500px;
     }
@@ -590,7 +590,7 @@ section {
   @media (orientation: portrait) {
     .hero-3d-layout > div {
       overflow: hidden;
-      clip-path: inset(20% 0 11% 0);
+      clip-path: inset(20% 0 0% 0);
     }
   }
   
